# in_definite

./: CHANGELOG.md  Cargo.toml  LICENSE  README.contributing.md  README.md  _pre-publish.sh  _prepare-changelog.sh  doc-view.sh  doc.sh  format-code.sh  git_tag.sh  go-published.sh  go.sh  install-c-linker.sh  install-cargo-release.sh  install-rust.sh  install-rustfmt-linux.sh  install-rustfmt-mac.sh  install-rustfmt-win.sh  pre-publish.sh  publish-dry-run.sh  publish.sh  test.e2e.local.sh  test.e2e.published.sh  test.sh
in_definite/: Cargo.toml  release.toml
in_definite/src/: lib.rs  options.rs
in_definite/src/core_is_an/: mod.rs
in_definite/src/rules/: mod.rs  rule_acronymns.rs  rule_acronyms.rs  rule_exceptions.rs  rule_numbers.rs
in_definite/src/utils/: string_helper.rs
in_definite_cmd/: Cargo.toml
projects/in_definite/: Cargo.toml  doc-view.sh  go.sh  prepare-changelog.sh  publish-dry-run.sh  publish.sh
projects/in_definite/in_definite/: Cargo.toml  release.toml
projects/in_definite/in_definite/src/: lib.rs  string_helper.rs
projects/in_definite/in_definite_cmd/src/: main.rs
tests_e2e/in_definite_cmd_local/: Cargo.toml
tests_e2e/in_definite_cmd_local/src/: main.rs
tests_e2e/in_definite_cmd_published/: Cargo.toml
