[package]
name = "in_definite"
description = "Get the indefinite article ('a' or 'an') to match the given word. For example: an umbrella, a user."
version = "0.2.4"
authors = ["sean <str_ie@yahoo.co.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mrseanryan/in_definite"
readme = "../README.md"
keywords = ["indefinite", "grammar", "english", "NLP", "text"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
