[package]
name = "in_definite_cmd_local"
version = "0.1.0"
authors = ["sean <str_ie@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# To use local build:
in_definite = { path = "../../in_definite" }
# To use published build:
# in_definite = "1"
