[package]
name = "in_definite"
description = "Get the indefinite article ('a' or 'an') to match the given word."
version = "0.1.0"
authors = ["sean <str_ie@yahoo.co.uk>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"

[lib]
name = "in_definite"
path = "src/lib.rs"
